--- a/audiovisual.html
+++ b/audiovisual.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sitio dedicado a homenajear al artista y filosofo Alejandro Dolina">
+  <meta name="description" content="Obras audiovisuales estrenadas en cine en las que participo el artista y filosofo Alejandro Dolina">
   <meta name="keywords" 
-  content="Alejandro Dolina, tango, musica, radio, teatro, arte, filosofia, dolina, venganza, la venganza sera terrible">
-  <meta name="google-site-verification" content="-pBiQpU4z8YVLUQ4A6LDJ83AJlWQKJMZLuH6blmRIxg" />
+  content="Alejandro Dolina, cine, contenido, audiovisual, tango, musica, radio, teatro, arte, filosofia, dolina, venganza, la venganza sera terrible">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -21,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&display=swap"
     rel="stylesheet">
-  <title>Alejandro Dolina - Un anti-homenaje</title>
+  <title>Alejandro Dolina - Cine y Radio, produccion y participacion</title>
 </head>
 
 <body>
@@ -70,57 +69,13 @@
     </div>
   </header>
 
-    <main class="main">
-      <div class="main__musicPlayer">
-        <audio class="main__musicPlayer--controls" controls autoplay>
-          <source src="/media/ambient_music.mp3" type="audio/mp3">
-        </audio>
-      </div>
-
-      <div class="main__cover">
-        <div>
-          <!--Imagen o conjunto de imagenes de presentacion-->
-          <div id="carouselExampleFade" class="carousel carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="media/retrato_01.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
-              </div>
-              <div class="carousel-item">
-                <img src="media/retrato_02.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
-              </div>
-              <div class="carousel-item">
-                <img src="media/retrato_03.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-        </div>
-
-        <div class="main__homeParagraph">
-          <p>Salzman examinó su mano y vio centenares de figuras lejanamente parecidas a los arcanos del
-            Tarot: la
-            Riqueza, el Poder, la Fama, el Amor, la Inteligencia, la Fuerza, el Honor, la Juventud, la
-            Razón, la
-            Salud, la Imaginación, el Arte, la Clarividencia, el Valor, la Fe, la Suerte, la Belleza, la
-            Virilidad, la Inspiración… Sin hacer ningún gesto, dio vuelta las cartas sobre la mesa.</p>
-          <p>—Buen juego —dijo el Tallador—, pero no alcanza.</p>
-          <p>Y jugó el naipe de la Muerte.</p>
-          <p class="main__homeParagraph--quoteSource">-"Cartas Marcadas", Alejandro Dolina.</p>
-        </div>
-      </div>
-
-    </main>
+  <div>
+    <h2 class="subtitlePages">Cine</h2>
   </div>
+
+
+
+
 
   <footer class="footer">
     <!--Datos del autor-->
