--- a/programa.html
+++ b/programa.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sitio dedicado a homenajear al artista y filosofo Alejandro Dolina">
+  <meta name="description" content="Descubri el famoso programa radial y teatral del artista y filosofo Alejandro Dolina">
   <meta name="keywords" 
-  content="Alejandro Dolina, tango, musica, radio, teatro, arte, filosofia, dolina, venganza, la venganza sera terrible">
-  <meta name="google-site-verification" content="-pBiQpU4z8YVLUQ4A6LDJ83AJlWQKJMZLuH6blmRIxg" />
+  content="Alejandro Dolina, Barton, Gillespie, am 750, tango, musica, radio, teatro, arte, filosofia, dolina, venganza, la venganza sera terrible">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -21,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&display=swap"
     rel="stylesheet">
-  <title>Alejandro Dolina - Un anti-homenaje</title>
+  <title>Alejandro Dolina - La Venganza Sera Terrible</title>
 </head>
 
 <body>
@@ -37,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="biografia.html">Biografia</a>
@@ -53,7 +52,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="programa.html">Programa</a>
+                <a class="nav-link active" href="programa.html">Programa</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -70,57 +69,75 @@
     </div>
   </header>
 
-    <main class="main">
-      <div class="main__musicPlayer">
-        <audio class="main__musicPlayer--controls" controls autoplay>
-          <source src="/media/ambient_music.mp3" type="audio/mp3">
-        </audio>
-      </div>
 
-      <div class="main__cover">
-        <div>
-          <!--Imagen o conjunto de imagenes de presentacion-->
-          <div id="carouselExampleFade" class="carousel carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="media/retrato_01.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
-              </div>
-              <div class="carousel-item">
-                <img src="media/retrato_02.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
-              </div>
-              <div class="carousel-item">
-                <img src="media/retrato_03.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
-              </div>
+    </div>
+
+
+    <h2 class="subtitlePages">Segmentos del programa:</h2>
+
+    <br><br>
+
+    <main  class="showMain">
+
+        <section class="showMain__section">
+            <iframe class="showMain__section--video" width="560" height="315" src="https://www.youtube.com/embed/cHdClbZqhK8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+
+            <div class="showMain__section--description">
+                <p class="showMain__section--descTitle">Segmento Dispositivo</p>
+                <p class="showMain__section--descContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odit, aperiam ratione quos cupiditate amet nam eius nemo, nisi in beatae iure! Reprehenderit similique consectetur cupiditate eum, accusantium expedita laboriosam.</p>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+        </section>
+
+        <br><br>
+
+        <section class="showMain__section">
+            <iframe class="showMain__section--video" width="560" height="315" src="https://www.youtube.com/embed/L7m3Bd0BsHs"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+
+            <div class="showMain__section--description">
+                <p class="showMain__section--descTitle">Segmento Humoristico</p>
+                <p class="showMain__section--descContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odit, aperiam ratione quos cupiditate amet nam eius nemo, nisi in beatae iure! Reprehenderit similique consectetur cupiditate eum, accusantium expedita laboriosam.</p>
+            </div>
+        </section>
+
+        <br><br>
+
+        <section class="showMain__section">
+            <iframe class="showMain__section--video" width="560" height="315" src="https://www.youtube.com/embed/0Yr2aiwJ4iI"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+
+            <div class="showMain__section--description">
+                <p class="showMain__section--descTitle">Segmento Historico</p>
+                <p class="showMain__section--descContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odit, aperiam ratione quos cupiditate amet nam eius nemo, nisi in beatae iure! Reprehenderit similique consectetur cupiditate eum, accusantium expedita laboriosam.</p>
+            </div>
+        </section>
+
+        <br><br><br>
+
+        <section class="showMain__section">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-wuJyLWowNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          <div class="showMain__section--description">
+              <p class="showMain__section--descTitle">El Show del Sordo Gance</p>
+              <p class="showMain__section--descContent">El ansiado show del Sordo Gance es uno de los principales atractivos de cada experiencia del programa. </p>
           </div>
+      </section>
 
-        </div>
-
-        <div class="main__homeParagraph">
-          <p>Salzman examinó su mano y vio centenares de figuras lejanamente parecidas a los arcanos del
-            Tarot: la
-            Riqueza, el Poder, la Fama, el Amor, la Inteligencia, la Fuerza, el Honor, la Juventud, la
-            Razón, la
-            Salud, la Imaginación, el Arte, la Clarividencia, el Valor, la Fe, la Suerte, la Belleza, la
-            Virilidad, la Inspiración… Sin hacer ningún gesto, dio vuelta las cartas sobre la mesa.</p>
-          <p>—Buen juego —dijo el Tallador—, pero no alcanza.</p>
-          <p>Y jugó el naipe de la Muerte.</p>
-          <p class="main__homeParagraph--quoteSource">-"Cartas Marcadas", Alejandro Dolina.</p>
-        </div>
-      </div>
+      <br><br><br>
 
     </main>
-  </div>
+
+
 
   <footer class="footer">
     <!--Datos del autor-->
