Elementos e Imagenes añadidas
Se añadieron elementos en la biografia. Se modificaron colores para estar a tono con la paleta de colores y se colocaron imagenes en lugar de los placeholders del index.

--- a/literatura.html
+++ b/literatura.html
@@ -78,8 +78,8 @@
         <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
           suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
           veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias? <br><br> <a
-            href="#">Mas info</a></p>
+          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
+          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
       <article class="literature__container rowReverse">
@@ -87,8 +87,8 @@
         <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
           suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
           veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias? <br><br> <a
-            href="#">Mas info</a></p>
+          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
+          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
       <article class="literature__container">
@@ -97,8 +97,8 @@
         <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
           suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
           veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias? <br><br> <a
-            href="#">Mas info</a></p>
+          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
+          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
       <article class="literature__container rowReverse">
@@ -106,8 +106,8 @@
         <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
           suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
           veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias? <br><br> <a
-            href="#">Mas info</a></p>
+          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
+          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
       <article class="literature__container">
@@ -115,18 +115,20 @@
         <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
           suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
           veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias? <br><br> <a
-            href="#">Mas info</a></p>
+          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
+          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
       <article class="literature__container rowReverse">
         <div class="literature__container--bookImg"><img src="/media/portada_libros/lvst20años.jpg" alt="La venganza sera terrible 20 años">
         </div>
-        <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
-          suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
-          veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias? <br><br> <a
-            href="#">Mas info</a></p>
+        <p class="literature__container--bookDesc">La Venganza será Terrible cumplió treinta años.
+          Este libro recorre esa historia mediante anécdotas y reflexiones en la voz de su protagonista principal y en las voces de aquellos que orbitaron en el universo humorístico, filosófico y musical de su creador.
+          
+          Testimonios de oyentes célebres, confesiones de los que participaron, datos y sucesos insólitos, transcripciones de los mejores momentos de la historia del programa.<br> Todo este material se completa con un prólogo de Gabriel Rolón y un archivo fotográfico inédito que llega hasta hoy, con el programa ya convertido en un espectáculo ambulante y más vigente que nunca.
+          
+          “Hacer radio salvó mi vida”, asegura Alejandro Dolina en estas páginas. A la luz de los hechos, podría afirmarse que también salvó las vidas de algunos otros.
+          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
     </main>
