--- a/programa.html
+++ b/programa.html
@@ -125,7 +125,7 @@
         <br><br><br>
 
         <section class="showMain__section">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/-wuJyLWowNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="showMain__section--video" width="560" height="315" src="https://www.youtube.com/embed/-wuJyLWowNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           <div class="showMain__section--description">
               <p class="showMain__section--descTitle">El Show del Sordo Gance</p>
