--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
           <div id="carouselExampleFade" class="carousel carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="media/retrato_01.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
+                <img src="media/retrato_01.jpg" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
               </div>
               <div class="carousel-item">
-                <img src="media/retrato_02.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
+                <img src="media/retrato_02.jpg" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
               </div>
               <div class="carousel-item">
-                <img src="media/retrato_03.png" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
+                <img src="media/retrato_03.jpg" class="main__cover--carouselImage d-block w-80" alt="retrato_de_dolina">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
