--- a/literatura.html
+++ b/literatura.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explora las diferentes obras literarias, novelas y otras composiciones del artista y filosofo Alejandro Dolina">
-  <meta name="keywords" 
-  content="Alejandro Dolina, literatura, libros, novelas, tango, musica, radio, teatro, arte, filosofia, dolina, venganza, la venganza sera terrible">
+  <meta name="description"
+    content="Explora las diferentes obras literarias, novelas y otras composiciones del artista y filosofo Alejandro Dolina">
+  <meta name="keywords"
+    content="Alejandro Dolina, literatura, libros, novelas, tango, musica, radio, teatro, arte, filosofia, dolina, venganza, la venganza sera terrible">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -74,60 +75,97 @@
 
     <main class="literature">
       <article class="literature__container">
-        <div class="literature__container--bookImg"><img src="/media/portada_libros/angelgris.jpg" alt="Cronicas del Angel Gris"></div>
-        <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
-          suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
-          veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
-          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
+        <div class="literature__container--bookImg"><img src="/media/portada_libros/angelgris.jpg"
+            alt="Cronicas del Angel Gris"></div>
+        <p class="literature__container--bookDesc">La leyenda del Ángel Gris de Flores asegura que, a medida que pase el
+          tiempo, los sueños serán más largos y las vigilias más cortas... Y los Hombres Sensibles soñarán que un Ángel
+          los acaricia con sus alas y los Refutadores de Leyendas soñarán que están despiertos y que los ángeles no
+          existen." A través de un enfoque que conjuga en clave literario-humorística la cultura universal con el
+          lenguaje y la filosofía genuinos del ciudadano bonaerense, estas crónicas -que conjugan la parodia, la fábula,
+          la leyenda, la alegoría-, hilvanadas unas con otras recrean lugares y personajes cotidianos vistos dentro de
+          un mundo onírico que se pretende posible. La lucha de los muchachos del Ángel Gris es sobre todo una lucha por
+          la poesía. Y de ello también dan cuenta de modo impar las ilustraciones de Hermenegildo Sábat.
+          <a class="literature__container__bookDesc--info" href="https://es.wikipedia.org/wiki/Cr%C3%B3nicas_del_%C3%81ngel_Gris">Mas info</a></p>
       </article>
 
       <article class="literature__container rowReverse">
-        <div class="literature__container--bookImg"><img src="/media/portada_libros/librodelfantasma.jpg" alt="El Libro del Fantasma"></div>
-        <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
-          suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
-          veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
-          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
+        <div class="literature__container--bookImg"><img src="/media/portada_libros/librodelfantasma.jpg"
+            alt="El Libro del Fantasma"></div>
+        <p class="literature__container--bookDesc">Los fantasmas prosperan con las arquitecturas perseverantes y las
+          memorias leales. Castillos milenarios y ofensas imprescriptibles los engordan. El progreso y el olvido, que
+          son hábitos de estos tiempos y de estas tierras, no los auspician. Por eso son tan escasos los fantasmas
+          criollos.
+          El que habita este libro es, me temo, uno de los menos atrayentes. Pertenece quizás a esa raza de espectros
+          que son una verdadera decepción para los amantes de los prodigios.
+          Me refiero a los fantasmas interiores, a las creaciones alucinatorias e individuales de honrados burgueses
+          incapaces ya de ver un espanto hecho y derecho.
+          <a class="literature__container__bookDesc--info" href="https://es.wikipedia.org/wiki/El_libro_del_fantasma">Mas info</a></p>
       </article>
 
       <article class="literature__container">
-        <div class="literature__container--bookImg"><img src="/media/portada_libros/amordeLaura.png" alt="Lo que me costo el amor de Laura">
+        <div class="literature__container--bookImg"><img src="/media/portada_libros/amordeLaura.png"
+            alt="Lo que me costo el amor de Laura">
         </div>
-        <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
-          suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
-          veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
-          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
+        <p class="literature__container--bookDesc">¿Cómo definir su peculiaridad? Tal vez el ''efecto Dolina'' pueda
+          sintetizarse en este procedimiento-matriz: una temática y una sintaxis narrativa de núcleos míticos,
+          filosóficos y metafísicos universales, enunciadas desde la carnadura barrial, marginal, con un tono
+          deliberadamente cotidiano y humorístico que asume incluso las modalidades más informales de lo popular (el
+          chiste, el juego de palabras picaresco, los usos lingüísticos incorrectos).
+
+          Dolina busca en su obra la conexión conciliadora de órdenes culturales a primera vista heterogéneos, y apunta
+          a la par a la fusión o mezcla de esos órdenes y a su alternancia o vaivén, a la asimilación mutua y a la
+          percepción.<br>
+          Esta opereta no se considera una narración como tal, pero merece un espacio entre las grandes producciones
+          poético-literarias del Maestro.
+          <a class="literature__container__bookDesc--info" href="https://es.wikipedia.org/wiki/Lo_que_me_cost%C3%B3_el_amor_de_Laura">Mas info</a></p>
       </article>
 
       <article class="literature__container rowReverse">
-        <div class="literature__container--bookImg"><img src="/media/portada_libros/bardelinfierno.jpg" alt="Bar del Infierno"></div>
-        <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
-          suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
-          veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
-          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
+        <div class="literature__container--bookImg"><img src="/media/portada_libros/bardelinfierno.jpg"
+            alt="Bar del Infierno"></div>
+        <p class="literature__container--bookDesc">El cafetín es un laberinto. Nuestro destino es extraviarnos en sus
+          encrucijadas. Pero algunos presienten una verdad aún más terrible: no se puede salir del bar… el afuera no
+          existe.
+          El Narrador de Historias está obligado a contar un cuento cada noche, a las doce. Nadie le presta atención.
+          Amores imposibles de la provincia de Buenos Aires, ciudades lejanas gobernadas por jaurías integran el curioso
+          repertorio. Pero el Narrador es también personaje de otra historia que lo muestra involucrado en una
+          conspiración para salir del bar, del tiempo o del lenguaje.
+          <a class="literature__container__bookDesc--info" href="https://es.wikipedia.org/wiki/Bar_del_Infierno">Mas info</a></p>
       </article>
 
       <article class="literature__container">
-        <div class="literature__container--bookImg"><img src="/media/portada_libros/cartasmarcadas.png" alt="Cartas Marcadas"></div>
-        <p class="literature__container--bookDesc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio perspiciatis,
-          suscipit adipisci non libero reprehenderit eligendi officiis, nobis deleniti possimus deserunt fugit rem
-          veritatis esse neque ipsum, iure soluta at. Aspernatur praesentium inventore minima? Tenetur libero nisi
-          assumenda quos perferendis asperiores a in, eos impedit ducimus, quibusdam nobis nam molestias?
-          <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
+        <div class="literature__container--bookImg"><img src="/media/portada_libros/cartasmarcadas.png"
+            alt="Cartas Marcadas"></div>
+        <p class="literature__container--bookDesc">Cartas marcadas es un libro envuelto en niebla. La cerrazón que cubre
+          las calles de Flores se tiende también sobre los capítulos de la novela provocando confusiones y obligándonos
+          a marchar despacio. Por otra parte, la acción perversa de los Conspira dores ha llenado el texto de
+          tachaduras, episodios falsos y agregados fraudulentos, para no hablar de páginas y capítulos enteros que han
+          sido robados.
+          La niebla no sólo dificulta la percepción, sino que tiene, como los vapores oraculares, un efecto
+          alucinatorio. Vemos poco y lo poco que vemos es dudoso. Los muertos se pasean por el barrio, las pasadillas se
+          hacen realidad y los sujetos se vuelven inconstantes. El lector anda a tientas entre personajes que tratan de
+          ocultar un secreto. El humo le inspira al principio una fe poética que lo convence de que debe dejarse guiar
+          por las intuiciones del amor y del arte. Hasta que comprende, en medio de la oscuridad, que las manos de
+          Virgilio y Beatriz que han venido orientándolo, no son más que otro engaño, el más perfecto, de un universo
+          que es ausencia pura.
+          <a class="literature__container__bookDesc--info" href="https://es.wikipedia.org/wiki/Cartas_marcadas">Mas info</a></p>
       </article>
 
       <article class="literature__container rowReverse">
-        <div class="literature__container--bookImg"><img src="/media/portada_libros/lvst20años.jpg" alt="La venganza sera terrible 20 años">
+        <div class="literature__container--bookImg"><img src="/media/portada_libros/lvst20años.jpg"
+            alt="La venganza sera terrible 20 años">
         </div>
         <p class="literature__container--bookDesc">La Venganza será Terrible cumplió treinta años.
-          Este libro recorre esa historia mediante anécdotas y reflexiones en la voz de su protagonista principal y en las voces de aquellos que orbitaron en el universo humorístico, filosófico y musical de su creador.
-          
-          Testimonios de oyentes célebres, confesiones de los que participaron, datos y sucesos insólitos, transcripciones de los mejores momentos de la historia del programa.<br> Todo este material se completa con un prólogo de Gabriel Rolón y un archivo fotográfico inédito que llega hasta hoy, con el programa ya convertido en un espectáculo ambulante y más vigente que nunca.
-          
-          “Hacer radio salvó mi vida”, asegura Alejandro Dolina en estas páginas. A la luz de los hechos, podría afirmarse que también salvó las vidas de algunos otros.
+          Este libro recorre esa historia mediante anécdotas y reflexiones en la voz de su protagonista principal y en
+          las voces de aquellos que orbitaron en el universo humorístico, filosófico y musical de su creador.
+
+          Testimonios de oyentes célebres, confesiones de los que participaron, datos y sucesos insólitos,
+          transcripciones de los mejores momentos de la historia del programa.<br> Todo este material se completa con un
+          prólogo de Gabriel Rolón y un archivo fotográfico inédito que llega hasta hoy, con el programa ya convertido
+          en un espectáculo ambulante y más vigente que nunca.
+
+          “Hacer radio salvó mi vida”, asegura Alejandro Dolina en estas páginas. A la luz de los hechos, podría
+          afirmarse que también salvó las vidas de algunos otros.
           <a class="literature__container__bookDesc--info" href="#">Mas info</a></p>
       </article>
 
